--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://karinnainiguez.github.io/untangled/",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "gh-pages": "^1.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
