--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "d3": "^5.5.0",
     "gh-pages": "^1.2.0",
     "react": "^16.4.1",
+    "react-d3-graph": "^1.3.0",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
     "reactjs-popup": "^1.1.1"
